--- a/requirements2.txt
+++ b/requirements2.txt
@@ -8,3 +8,10 @@ piexif
 segment-anything
 timm
 openai
+
+triton
+torchaudio
+librosa
+lumaai
+# triton - skip for now as it's optional and can cause install issues on Windows
+# triton>=2.0.0; platform_system == "Linux"
